--- a/documentation/milestone-1.html
+++ b/documentation/milestone-1.html
@@ -21,8 +21,9 @@
     <p>
         <strong>Goal:</strong>
         The website will explain what the api does and how to use it. The website will show example code snippets,
-        and a codepen playground that allows the user to edit and test out the api. This service will offer a
-        straightforward solution for developers to create functional email forms on their
+        and an area where they can put their email address into a code snippets, and press a "send" button to send a
+        test email, to show how the service works.
+        This service will offer a straightforward solution for developers to create functional email forms on their
         static websites. Currently, there aren't many free options available for developers hosting static sites on
         platforms like GitHub Pages or Cloudflare Pages to collect contact information from users. The goal of this
         project is to impress potential employers and land a job. Regardless of the outcome, I want to build a tool
@@ -31,7 +32,6 @@
         email templates for paying customers. The possibilities are limitless. Depending on user adoption, I could
         even turn this into a profitable business, or sell the platform to another competitor.
     </p>
-
     <h2>Persona</h2>
     <p>
         <strong>Name:</strong>
@@ -70,6 +70,5 @@
         <strong>User Story:</strong>
         As a user, I want to get my forms working with just 1 line of code.
     </p>
-
 </body>
 </html>
