--- a/documentation/milestone-1.html
+++ b/documentation/milestone-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PWP - Peter Nguyen</title>
+    <title>OneLineForms</title>
     <link rel="stylesheet">
 </head>
 <body>
