--- a/documentation/milestone-2.html
+++ b/documentation/milestone-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PWP - Peter Nguyen</title>
+    <title>OneLineForms</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
