--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="/src/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Peter PWP</title>
+    <title>OneLineForms</title>
     <link rel="stylesheet"
           href="node_modules/highlight.js/styles/rainbow.css">
   </head>
